test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/duplicate.widl
typedef int Test;

interface Test {
  void foo();
};
